fix: apply blue hover to dark mode too

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -7,5 +7,5 @@
   --link-hover: #4a90d9;
 }
 .theme-dark {
-  --link-hover: var(--tertiary);
+  --link-hover: #4a90d9;
 }
